// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiStepHorizontal is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiStepHorizontal testClass1 testClass2 emotion-euiStepHorizontal-isIncomplete"
  data-test-subj="test subject string"
  title="Step 1 is incomplete"
>
  <span
    class="euiStepNumber euiStepHorizontal__number emotion-euiStepNumber-medium-incomplete-euiStepHorizontal__number"
  >
    <span
      class="emotion-euiScreenReaderOnly"
    >
      Step 1 is incomplete
    </span>
    <span
      aria-hidden="true"
      class="euiStepNumber__number"
    >
      1
    </span>
  </span>
  <span
    class="euiStepHorizontal__title emotion-euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props status complete is rendered 1`] = `
<button
  class="euiStepHorizontal emotion-euiStepHorizontal-isComplete"
  title="Step 1 is complete"
>
  <span
    class="euiStepNumber euiStepHorizontal__number emotion-euiStepNumber-medium-complete-euiStepHorizontal__number"
  >
    <span
      class="euiStepNumber__icon emotion-euiStepNumber__icon"
      data-euiicon-type="check"
    >
      Step 1 is complete
    </span>
  </span>
  <span
    class="euiStepHorizontal__title emotion-euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props status current is rendered 1`] = `
<button
  class="euiStepHorizontal emotion-euiStepHorizontal-isSelected"
  title="Current step is 1"
>
  <span
    class="euiStepNumber euiStepHorizontal__number emotion-euiStepNumber-medium-current-euiStepHorizontal__number"
  >
    <span
      class="emotion-euiScreenReaderOnly"
    >
      Current step is 1
    </span>
    <span
      aria-hidden="true"
      class="euiStepNumber__number"
    >
      1
    </span>
  </span>
  <span
    class="euiStepHorizontal__title emotion-euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props status danger is rendered 1`] = `
<button
  class="euiStepHorizontal emotion-euiStepHorizontal"
  title="Step 1"
>
  <span
    class="euiStepNumber euiStepHorizontal__number emotion-euiStepNumber-medium-danger-euiStepHorizontal__number"
  >
    <span
      class="euiStepNumber__icon emotion-euiStepNumber__icon"
      data-euiicon-type="cross"
    >
      Step 1 has errors
    </span>
  </span>
  <span
    class="euiStepHorizontal__title emotion-euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props status disabled is rendered 1`] = `
<button
  class="euiStepHorizontal emotion-euiStepHorizontal-isDisabled"
  title="Step 1 is disabled"
>
  <span
    class="euiStepNumber euiStepHorizontal__number emotion-euiStepNumber-medium-disabled-euiStepHorizontal__number"
  >
    <span
      class="emotion-euiScreenReaderOnly"
    >
      Step 1 is disabled
    </span>
    <span
      aria-hidden="true"
      class="euiStepNumber__number"
    >
      1
    </span>
  </span>
  <span
    class="euiStepHorizontal__title emotion-euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props status disabled overrides the passed status 1`] = `
<button
  class="euiStepHorizontal emotion-euiStepHorizontal-isDisabled"
  disabled=""
  title="Step 1 is disabled"
>
  <span
    class="euiStepNumber euiStepHorizontal__number emotion-euiStepNumber-medium-disabled-euiStepHorizontal__number"
  >
    <span
      class="emotion-euiScreenReaderOnly"
    >
      Step 1 is disabled
    </span>
    <span
      aria-hidden="true"
      class="euiStepNumber__number"
    >
      1
    </span>
  </span>
  <span
    class="euiStepHorizontal__title emotion-euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props status incomplete is rendered 1`] = `
<button
  class="euiStepHorizontal emotion-euiStepHorizontal-isIncomplete"
  title="Step 1 is incomplete"
>
  <span
    class="euiStepNumber euiStepHorizontal__number emotion-euiStepNumber-medium-incomplete-euiStepHorizontal__number"
  >
    <span
      class="emotion-euiScreenReaderOnly"
    >
      Step 1 is incomplete
    </span>
    <span
      aria-hidden="true"
      class="euiStepNumber__number"
    >
      1
    </span>
  </span>
  <span
    class="euiStepHorizontal__title emotion-euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props status loading is rendered 1`] = `
<button
  class="euiStepHorizontal emotion-euiStepHorizontal"
  title="Step 1"
>
  <span
    class="euiStepNumber euiStepHorizontal__number emotion-euiStepNumber-medium-loading-euiStepHorizontal__number"
  >
    <span
      class="emotion-euiScreenReaderOnly"
    >
      Step 1 is loading
    </span>
    <span
      aria-label="Loading"
      class="euiLoadingSpinner euiStepNumber__loader emotion-euiLoadingSpinner-xl"
      role="progressbar"
    />
  </span>
  <span
    class="euiStepHorizontal__title emotion-euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props status warning is rendered 1`] = `
<button
  class="euiStepHorizontal emotion-euiStepHorizontal"
  title="Step 1 has warnings"
>
  <span
    class="euiStepNumber euiStepHorizontal__number emotion-euiStepNumber-medium-warning-euiStepHorizontal__number"
  >
    <span
      class="euiStepNumber__icon emotion-euiStepNumber__icon"
      data-euiicon-type="alert"
    >
      Step 1 has warnings
    </span>
  </span>
  <span
    class="euiStepHorizontal__title emotion-euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props step 1`] = `
<button
  class="euiStepHorizontal emotion-euiStepHorizontal-isIncomplete"
  title="Step 5 is incomplete"
>
  <span
    class="euiStepNumber euiStepHorizontal__number emotion-euiStepNumber-medium-incomplete-euiStepHorizontal__number"
  >
    <span
      class="emotion-euiScreenReaderOnly"
    >
      Step 5 is incomplete
    </span>
    <span
      aria-hidden="true"
      class="euiStepNumber__number"
    >
      5
    </span>
  </span>
  <span
    class="euiStepHorizontal__title emotion-euiStepHorizontal__title"
  />
</button>
`;

exports[`EuiStepHorizontal props title 1`] = `
<button
  class="euiStepHorizontal emotion-euiStepHorizontal-isIncomplete"
  title="Step 1: First step is incomplete"
>
  <span
    class="euiStepNumber euiStepHorizontal__number emotion-euiStepNumber-medium-incomplete-euiStepHorizontal__number"
  >
    <span
      class="emotion-euiScreenReaderOnly"
    >
      Step 1 is incomplete
    </span>
    <span
      aria-hidden="true"
      class="euiStepNumber__number"
    >
      1
    </span>
  </span>
  <span
    class="euiStepHorizontal__title emotion-euiStepHorizontal__title"
  >
    First step
  </span>
</button>
`;
